# rmst-tools-tauri

./: .release-it.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build.ts  del-tag.mjs  release.mjs
src/: App.tsx  App.vue  main.less  main.ts  main.tsx  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons2/: ww-script.js
src-tauri/src/: commands.rs  lib.rs  localStore.rs  main.rs
src/pages/: OpenFolder.tsx  OpenFolder.vue  QuickInput.tsx  Setting.tsx  Setting.vue
src/pages/Setting/: SettingConfig.tsx  index.tsx
src/pages/Setting/SmallTool/: ExecCommand.tsx  GitSetting.tsx  KillPortTool.tsx  OpenWindow.tsx  index.tsx
~/.tauri/: myapp.key  myapp.key.pub
