[package]
name = "rmst-tools-tauri"
version = "0.2.15"
description = "a tools by tauri"
authors = ["人美声甜"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rmst_tools_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
  "image-ico",
  "devtools",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.0"
# urlencoding = "2.1.3"
# port-killer = "0.1.0"
# tokio = { version = "1.45.0", features = ["full"] }
# enigo = "0.3.0"
log = "0.4.27"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
# tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
# tauri-plugin-fs = "2.2.0"
tauri-plugin-process = "2"
# tauri-plugin-clipboard-manager = "2.2.2"
# tauri-plugin-deep-link = "2.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# tauri-plugin-single-instance = "2"
# tauri-plugin-autostart = "2.2.0"
# tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-updater = "2"
